--- a/frontend/src/config.json
+++ b/frontend/src/config.json
@@ -1,7 +1,7 @@
 {
     "system": {
-        "name": "Ouvidoria Digital de Macapá",
-        "url": "https://pmm-ap.ouvindovc.com.br",
+        "name": "Ouvidoria Digital",
+        "url": "https://ouvindovc.com.br",
         "color": {
             "lightTheme": {
                 "palette": {
